--- a/bower.json
+++ b/bower.json
@@ -60,7 +60,8 @@
     "simple-carousel": "franjsc/simple-carousel#^1.1.0",
     "paper-autocomplete-input": "NeilujD/paper-autocomplete-input#^1.2.0",
     "google-apis": "GoogleWebComponents/google-apis#^1.1.7",
-    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6"
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
+    "geo-query": "^0.3.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
