--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,10 @@
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      "database-rules.json",
+      "storage.rules",
+      "functions"
     ],
     "rewrites": [
       {
@@ -16,5 +19,4 @@
       }
     ]
   }
-
 }
