--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,28 @@
   "name": "Beer-Fly",
   "short_name": "Beer-Fly",
   "icons": [{
-      "src": "images/shop-icon-128.png",
-      "sizes": "128x128",
+      "src": "images/beer-icon-22.png",
+      "sizes": "22x22",
       "type": "image/png"
     }, {
-      "src": "images/shop-icon-192.png",
-      "sizes": "192x192",
+      "src": "images/beer-icon-50.png",
+      "sizes": "50x50",
       "type": "image/png"
     },{
-      "src": "images/shop-icon-384.png",
-      "sizes": "384x384",
+      "src": "images/beer-icon-58.png",
+      "sizes": "58x58",
+      "type": "image/png"
+    },{
+      "src": "images/beer-icon-120.png",
+      "sizes": "120x120",
+      "type": "image/png"
+    },{
+      "src": "images/beer-icon-180.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },{
+      "src": "images/beer-icon-1024.png",
+      "sizes": "1024x1024",
       "type": "image/png"
     }],
   "start_url": "/",
