--- a/bower.json
+++ b/bower.json
@@ -50,7 +50,8 @@
     "google-apis": "GoogleWebComponents/google-apis#^1.1.7",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
     "geo-query": "^0.3.1",
-    "toggle-icon": "^1.1.2"
+    "toggle-icon": "^1.1.2",
+    "paper-time-input": "ryanburns23/paper-time-input#^1.0.4"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
