--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@ language: node_js
 node_js:
   - "6.0"
 before_script:
-  - npm install -g gulp
-  - npm install gulp
+  # - npm install -g gulp
+  # - npm install gulp
   - npm install polymer-cli
-  - npm install -g bower
-  - npm install css-slam
-  - npm install html-minifier
-  - npm install uglify-js
+  # - npm install -g bower
+  # - npm install css-slam
+  # - npm install html-minifier
+  # - npm install uglify-js
   - npm install -g firebase-tools
-  - bower update
-  - bower install --save webcomponents/webcomponentsjs
+  # - bower update
+  # - bower install --save webcomponents/webcomponentsjs
  
 script: polymer build
 after_success:
