--- a/bower.json
+++ b/bower.json
@@ -47,7 +47,9 @@
     "geo-query": "jifalops/geo-query#^0.3.1",
     "toggle-icon": "^1.1.2",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
-    "iron-iconset": "PolymerElements/iron-iconset#^2.0.0"
+    "iron-iconset": "PolymerElements/iron-iconset#^2.0.0",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
+    "paper-slider": "PolymerElements/paper-slider#^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "^6.0.0"
