--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,20 @@
 language: node_js
-node_js:
-  - "6.0"
+node_js: stable
+
 before_script:
-  # - npm install -g gulp
-  # - npm install gulp
+
   - npm install polymer-cli
-  - npm install -g bower
-  # - npm install css-slam
-  # - npm install html-minifier
-  # - npm install uglify-js
   - npm install -g firebase-tools
+  - npm install -g bower
   - bower update
   # - bower install --save webcomponents/webcomponentsjs
-  
  
+before_script:
+- npm install web-component-tester
+- npm install -g bower
+- bower install
+  
 script: polymer build
+
 after_success:
-# deploy:
-#   provider: firebase
-#   token:
-#     secure: "$FIREBASE_TOKEN"
-#   project: "staging"
-#   hosting: 
-#     public: "build/unbundled",
-#   only: "hosting"
   - firebase --project staging deploy --only hosting --token $FIREBASE_TOKEN
