--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,13 @@
 language: node_js
-node_js: stable
-
+node_js:
+  - "6.0"
 before_script:
-
   - npm install polymer-cli
   - npm install -g firebase-tools
   - npm install -g bower
   - bower update
   # - bower install --save webcomponents/webcomponentsjs
  
-before_script:
-- npm install web-component-tester
-- npm install -g bower
-- bower install
-  
 script: polymer build
-
 after_success:
   - firebase --project staging deploy --only hosting --token $FIREBASE_TOKEN
