--- a/bower.json
+++ b/bower.json
@@ -51,6 +51,7 @@
     "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0"
   },
   "devDependencies": {
-    "web-component-tester": "^6.0.0"
+    "web-component-tester": "^6.0.0",
+    "web-animations-js": "web-animations/web-animations-js#^2.2.0"
   }
 }
