--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,7 @@
     "google-apis": "GoogleWebComponents/google-apis#^1.1.7",
     "iron-localstorage": "PolymerElements/iron-localstorage#^2.0.0",
     "geo-query": "jifalops/geo-query#^0.3.1",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.24",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#0.7.24",
     "iron-iconset": "PolymerElements/iron-iconset#^2.0.0",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
     "paper-slider": "PolymerElements/paper-slider#^2.0.0",
@@ -53,5 +53,8 @@
   "devDependencies": {
     "web-component-tester": "^6.0.0",
     "web-animations-js": "web-animations/web-animations-js#^2.2.0"
+  },
+  "resolutions": {
+    "webcomponentsjs": "^0.7.24"
   }
 }
