--- a/bower.json
+++ b/bower.json
@@ -6,14 +6,13 @@
   ],
   "private": true,
   "dependencies": {
-    "polymer": "polymer/polymer#^1.9.1",
+    "polymer": "Polymer/polymer#^1.9.2",
     "app-layout": "PolymerElements/app-layout#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.0",
     "app-storage": "PolymerElements/app-storage#^2.0.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
-    "iron-form": "PolymerElements/iron-form#^1.1.5",
     "iron-icon": "PolymerElements/iron-icon#^2.0.0",
-    "iron-iconset-svg": "polymerelements/iron-iconset-svg#^1.0.0",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.0.0",
     "iron-media-query": "PolymerElements/iron-media-query#^2.0.0",
     "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#^2.0.0",
     "iron-pages": "PolymerElements/iron-pages#^2.0.0",
@@ -48,7 +47,11 @@
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
     "paper-slider": "PolymerElements/paper-slider#^2.0.0",
     "neon-animation": "PolymerElements/neon-animation#^2.0.0",
-    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0"
+    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.2",
+    "iron-a11y-announcer": "PolymerElements/iron-a11y-announcer#^2.0.0",
+    "iron-input": "PolymerElements/iron-input#^2.0.0",
+    "iron-form-element-behavior": "PolymerElements/iron-form-element-behavior#^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "^6.0.0",
