--- a/bower.json
+++ b/bower.json
@@ -53,7 +53,8 @@
     "iron-input": "PolymerElements/iron-input#^2.0.0",
     "iron-form-element-behavior": "PolymerElements/iron-form-element-behavior#^2.0.0",
     "stripe-elements": "bennypowers/stripe-elements#^0.1.1",
-    "moment-element": "abdonrd/moment-element#^2.0.0"
+    "moment-element": "abdonrd/moment-element#^2.0.0",
+    "paper-badge": "PolymerElements/paper-badge#^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "^6.0.0",
