--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,8 @@
     "firebase-admin": "^4.1.2",
     "firebase-functions": "^0.5.9",
     "geofire": "^4.1.2",
-    "stripe": "^4.23.0"
+    "stripe": "^4.23.0",
+    "swearjar": "^0.2.0"
   },
   "private": true
 }
